--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "main.js",
   "scripts": {
+    "start": "node src/main.js",
     "dev": "nodemon src/main.js",
     "postinstall": "prisma generate"
   },
