--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "main.js",
   "scripts": {
-    "start": "node src/main.js",
-    "dev": "nodemon src/main.js",
+    "start": "node main.js",
+    "dev": "nodemon main.js",
     "postinstall": "prisma generate"
   },
   "keywords": [],
