--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/main.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": [
-          "dist/**"
-        ]
-      }
+      "src": "./main.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/src/routes/*.js",
-      "dest": "src/main.js"
+      "src": "/(.*)",
+      "dest": "/"
     }
   ]
 }
